Chore: Se sube la ultima version del proyecto

--- a/03-Desarrollo/Proyecto formativo django/SaleCold/Carts/templates/cart/carrito de compras.html
+++ b/03-Desarrollo/Proyecto formativo django/SaleCold/Carts/templates/cart/carrito de compras.html
@@ -68,7 +68,7 @@
                     El costo del envío no está incluido en el precio
                 </p>
         
-                <a href="{% url 'Orders:order' %}" class="container-confirm-shop-cart">
+                <a href="{% url 'Carts:check_quantity_cart' %}" class="container-confirm-shop-cart">
                     Ir a pagar
                 </a>
             </section>
