--- a/03-Desarrollo/Proyecto formativo django/SaleCold/static/css/carritoDeCompras.css
+++ b/03-Desarrollo/Proyecto formativo django/SaleCold/static/css/carritoDeCompras.css
@@ -117,6 +117,7 @@ body {
     -ms-border-radius: .5em;
     -o-border-radius: .5em;
     padding: 1em;
+    font-size: .8rem;
 }
 
 .section-products-cart-shopping {
