--- a/03-Desarrollo/Proyecto formativo django/SaleCold/static/css/media_queries/tablet.css
+++ b/03-Desarrollo/Proyecto formativo django/SaleCold/static/css/media_queries/tablet.css
@@ -41,7 +41,7 @@
     .container-login {
         width: 65%;
     }
-    .container-form-register, .container-form-contact {
+    .container-form-register, .container-form-contact, .container-section-add-address-type-of-delivery {
         width: 55%;
         margin-right: auto;
         margin-left: auto;
@@ -95,13 +95,64 @@
         background-color: white;
         margin: 0;
     }
+    .glider-prev {
+        left: 0;
+    }
+    .glider-next {
+        right: 0;
+    }
+    .main-product {
+        padding: 2em;
+        font-size: 1rem;
+    }
+    .container-images-product {
+        gap: 1.4em;
+    }
+    .container-info-product__title, .container-others-products__title {
+        font-size: 1.3rem;
+    }
+    .section-view-product {
+        margin-bottom: 2.8em;
+    }
+    .container-figure-product__img {
+        width: 50%;
+        height: 60%;
+    }
+    .container-figure-product__img--width {
+        width: 50%;
+        height: 70%;
+    }
+    .glider-prev {
+        left: -.5em;
+    }
+    
+    .glider-next {
+        right: -.5em;
+    }
+    .container-label-address-user__input, .container-label-address-user__select, .container-form-address-user__btn, .container-label-form__input, .container-select-update-user, .container-form-uptade-user__btn, .form-contraseña__btn, .container-label-form-contraseña__input {
+        max-width: 360px;
+    }
+    .container-main-dashboard-user {
+        padding: 1.6em;
+    }
+    .main-order, .main-order-address {
+        padding: 1.4em;
+    }
+    .container-total-resume-order {
+        padding: 1.7em;
+    }
+    .container-resume-products-order, .container-breadcrumb, .container-total-resume-order, .container-section-type-of-delivery-order, .container-type-of-payment-order, .container-confirm-order {
+        width: 390px;
+        margin-left: auto;
+        margin-right: auto;
+    }
 }
 
 @media screen and (min-width: 800px) {
     .container-login {
         width: 45%;
     }
-    .container-form-register, .container-form-contact {
+    .container-form-register, .container-form-contact, .container-section-add-address-type-of-delivery {
         width: 45%;
     }
     .main-cart-shopping {
@@ -110,5 +161,32 @@
 
     .container-form-delete-product {
         left: 94%;
+    }
+    .section-productos-ofertados__title {
+        font-size: 1.4rem;
+    }
+    .container-label-address-user__input, .container-label-address-user__select, .container-form-address-user__btn, .container-label-form__input, .container-select-update-user, .container-form-uptade-user__btn, .form-contraseña__btn, .container-label-form-contraseña__input {
+        font-size: 1rem;
+        height: 42px;
+    }
+    .container-main-dashboard-user__title {
+        font-size: 1.3rem;
+    }
+    .container-list-address-user, .container-info-element-address-user__link {
+        font-size: 1rem;
+    }
+    .container-element-address-user {
+        height: 245px;
+        padding: 1.3em;
+    }
+    .container-info-element-address-user__link {
+        width: 94px;
+        height: 40px;
+        line-height: 40px;
+    }
+    .container-resume-products-order, .container-breadcrumb, .container-total-resume-order, .container-section-type-of-delivery-order, .container-type-of-payment-order, .container-confirm-order {
+        width: 470px;
+        margin-left: auto;
+        margin-right: auto;
     }
 }
