--- a/03-Desarrollo/Proyecto formativo django/SaleCold/templates/snippets/main_nav.html
+++ b/03-Desarrollo/Proyecto formativo django/SaleCold/templates/snippets/main_nav.html
@@ -21,7 +21,7 @@
 							{% elif categoria.name == 'Aire acondicionado' %}
 								<img src="https://res.cloudinary.com/dpxek6oka/image/upload/v1645663906/images/aire-acondicionado_md11uu_btrcqe.webp" alt="Icono {{categoria.name}}" aria-hidden="true" class="container-link-element-categories-main-menu__icon" decoding="async" loading="lazy">
 							{% elif categoria.name == 'Gases refrigerantes' %}
-								<i class="fa-solid fa-bottle-water container-link-element-categories-main-menu__icon" aria-hidden="true"></i>
+								<img src="https://res.cloudinary.com/dpxek6oka/image/upload/v1647824645/images/spray-para-el-cabello-1_ns38f5.webp" alt="Icono {{categoria.name}}" loading="lazy" decoding="async" class="container-link-element-categories-main-menu__icon">
 							{% endif %}
 							{{categoria}}
 							<i class="fa-solid fa-angle-right container-link-element-categories-main-menu__arrow" aria-hidden="true"></i>
@@ -50,8 +50,8 @@
 				<ul class="container-options-user-main-menu" id="container-toggle-main-menu-options-user">
 					<li class="container-element-option-user-main-menu">
 						<a href="{% url 'Users:dashboard-user' %}" class="container-link-elemento-option-user-main-menu">
-							<i class="fa-solid fa-gear container-link-elemento-option-user-main-menu__icon" aria-hidden="true"></i>
-							Configuracion
+							<i class="fa-solid fa-user-gear container-link-elemento-option-user-main-menu__icon" aria-hidden="true"></i>
+							Mi cuenta
 						</a>
 					</li>
 					<li class="container-element-option-user-main-menu">
