--- a/03-Desarrollo/Proyecto formativo django/SaleCold/Orders/templates/orders/pedido.html
+++ b/03-Desarrollo/Proyecto formativo django/SaleCold/Orders/templates/orders/pedido.html
@@ -16,33 +16,46 @@
 
         {% include 'orders/snippets/breadcrumb.html' %}
 
-        <h2 class="main-order__title">Revisa tu orden de compra</h2>
-
-        <section>
-            <ul>
-                {% for object in carrito.products_related %}
-                    {% with producto=object.product %}
-                        <li>
-                            <img src="{{producto.image}}" alt="{{producto}}" loading="lazy" decoding="async">
-                            <a href="{% url 'Products:product' producto.slug %}">{{producto}}</a>
-                            <p>Cantidad: {{object.quantity}}</p>
-                            <p>Precio: $ {{producto.final_price|intcomma}}</p>
-                        </li>
-                    {% endwith %}
-                {% endfor %}
-            </ul>
+        <section class="container-resume-products-order">
+            <h2 class="main-order__title">Revisa tu orden de compra</h2>
+            {% for object in carrito.products_related %}
+                {% with producto=object.product %}
+                        <article class="container-detail-product-order">
+                            <img src="{{producto.image}}" alt="{{producto}}" loading="lazy" decoding="async" class="container-detail-product-order__img">
+                            <a href="{% url 'Products:product' producto.slug %}" class="container-detail-product-order__link">
+                                {{producto}}
+                            </a>
+                            <p class="container-detail-product-order__paragraph container-detail-product-order__paragraph--position">
+                                {{object.quantity}}
+                            </p>
+                            <p class="container-detail-product-order__paragraph">
+                                $ {{producto.final_price|intcomma}}
+                            </p>
+                        </article>
+                {% endwith %}
+            {% endfor %}
         </section>
 
-        <section>
-            <h2>Resumen orden de compra</h2>
-            <p>
-                <strong>Total:</strong> $ {{ orden.get_total|intcomma }}
+        <section class="container-total-resume-order">
+            <h2 class="container-total-resume-order__title">
+                Resumen orden de compra
+            </h2>
+            <p class="container-paragraph-total-resume-order">
+                <strong>Subtotal:</strong> $ {{ carrito.subtotal|intcomma }}
             </p>
-            <p>
-                <i class="fa-solid fa-truck-fast" aria-hidden="true"></i>
+            <p class="container-paragraph-total-resume-order">
+                <strong>IVA 19%: </strong> $ {{carrito.total_iva|intcomma }}
+            </p> 
+            <p class="container-paragraph-total-resume-order">
+                <strong>Total:</strong> $ {{ carrito.total|intcomma }}
+            </p>
+            <p class="container-paragraph-total-resume-order container-paragraph-total-resume-order--size">
+                <i class="fa-solid fa-truck-fast container-paragraph-total-resume-order__icon" aria-hidden="true"></i>
                 El costo del envío no está incluido en el precio
             </p>
-            <a href="#">Confirmar pedido</a>
+            <a href="{% url 'Orders:address' %}" class="container-total-resume-order__link">
+                Confirmar orden de compra
+            </a>
         </section>
 
         {% include 'snippets/aside.html' %}
