--- a/03-Desarrollo/Proyecto formativo django/SaleCold/Products/templates/products/producto.html
+++ b/03-Desarrollo/Proyecto formativo django/SaleCold/Products/templates/products/producto.html
@@ -59,34 +59,52 @@
 
                     <input type="hidden" name="product_id" value="{{producto.id_product}}">
 
-                    <label class="container-count-order">
-                        <input type="button" title="Eliminar" value="-" id="remove_product" class="container-count-order__add" />
-                        <input type="number" readonly value="1" id="quantity" name="quantity" class="container-count-order__quantity">
-                        <input type="button" title="Adicionar" value="+" id="add_product" class="container-count-order__remove" />
+                    <label class="container-count-order {% if producto.stock == 0 %}container-count-order--deactivated{% endif %}">
+                        <input type="button" title="Eliminar" value="-" id="remove_product" class="container-count-order__add {% if producto.stock == 0 %}container-form-product--deactived{% endif %}" />
+                        <input type="number" readonly value="1" id="quantity" name="quantity" class="container-count-order__quantity {% if producto.stock == 0 %}container-form-product--deactived{% endif %}">
+                        <input type="button" title="Adicionar" value="+" id="add_product" class="container-count-order__remove {% if producto.stock == 0 %}container-form-product--deactived{% endif %}" />
                     </label>
 
-                    <button class="container-form-product__btn">
-                        <i class="fas fa-shopping-cart container-add-product__icon" aria-hidden="true"></i> 
-                        Agregar al carrito
+                    <button class="container-form-product__btn {% if producto.stock == 0 %}container-form-product__btn--deactived{% endif %}">
+                        <i class="fas fa-shopping-cart container-add-product__icon" aria-hidden="true"></i>
+                        {% if producto.stock == 0 %}
+                            Producto no disponible
+                        {% else %}
+                            Agregar al carrito
+                        {% endif %} 
                     </button>
                 </form>
             </article>
         </section>
 
-        <section class="container-others-products">
+        <section class="container-others-products glider-contain">
             <h2 class="container-others-products__title">
                 Otros productos relacionados
             </h2>
 
-            <div class="container-more-products">
+            <div class="container-more-products glider">
                 {% for producto in productos_aleatorios %}
-                    {% include 'products/snippets/plantillaProducto.html' %}
+                    <section>
+                        {% include 'products/snippets/plantillaProducto.html' %}
+                    </section>
+                {% empty %}
+                    <p>No hay productos relacionados :(</p>
                 {% endfor %}
             </div>
+
+            <button aria-label="Previous" class="glider-prev">
+                <i class="fa-solid fa-angle-left" aria-hidden="true"></i>
+            </button>
+            <button aria-label="Next" class="glider-next">
+                <i class="fa-solid fa-angle-right" aria-hidden="true"></i>
+            </button>
         </section>
 
         {% include 'snippets/aside.html' %}
     </main>
 
     {% include 'snippets/footer.html' %}
+
+    <script src="https://cdn.jsdelivr.net/npm/glider-js@1.7.7/glider.min.js" defer></script>
+    <script src="{% static 'js/sliders.js' %}" defer></script>
 {% endblock %}
