--- a/03-Desarrollo/Proyecto formativo django/SaleCold/static/css/media_queries/desktop.css
+++ b/03-Desarrollo/Proyecto formativo django/SaleCold/static/css/media_queries/desktop.css
@@ -11,7 +11,7 @@
     .main-login {
         height: 70vh;
     }
-    .container-form-register, .container-form-contact {
+    .container-form-register, .container-form-contact, .container-section-add-address-type-of-delivery {
         width: 35%;
     }
     .container-form-contact__title {
@@ -59,7 +59,6 @@
     .main-cart-shopping__title {
         margin: 0;
         height: 30px;
-        font-size: 1.4rem;
     }
 
     .section-products-cart-shopping {
@@ -162,6 +161,77 @@
     .section-productos-ofertados__title {
         text-align: end;
     }
+    .glider-prev {
+        left: -.4em;
+    }
+    .glider-next {
+        right: -.4em;
+    }
+    .section-view-product {
+        display: flex;
+        gap: 2.2em;
+        margin-bottom: 1em;
+    }
+    .container-info-product__title {
+        margin-top: 0;
+    }
+    .container-count-order, .container-form-product__btn {
+        margin-left: 0;
+        margin-right: 0;
+    }
+    .container-images-product {
+        height: 300px;
+        grid-template-columns: 90px 270px;
+        grid-template-rows: repeat(3, 1fr);
+        gap: 1.2em;
+    }
+    .container-figure-product--position {
+        grid-row: 1 / span 3;
+        grid-column: 2;
+    }
+    .container-more-products, .container-products {
+        height: 370px;
+    }
+    .glider-track {
+        height: 370px;
+        padding-top: 1em;
+        padding-left: 1em;
+    }
+    .container-others-products {
+        margin-bottom: 0;
+    }
+    .container-others-products__title {
+        margin-bottom: .6em;
+    }
+    .glider-prev, .glider-next {
+        top: 45%;
+    }
+    .container-template-product {
+        margin: 0;
+    }
+    .main {
+        margin-bottom: 0;
+    }
+    .section-productos-ofertados {
+        width: 95%;
+    }
+    .container-list-address-user, .container-main-dashboard-user__link {
+        margin-left: 1.1rem;
+        margin-right: 1.1rem;
+    }
+    .container-form-address-user {
+        margin-left: 1.2em;
+    }
+    .container-detail-product-order {
+        padding: 1.3em;
+    }
+    .container-total-resume-order {
+        padding: 2em;
+    }
+    .container-form-address-user {
+        margin: 0;
+        margin-top: 1.6em;
+    }
 }
 
 @media screen and (min-width: 1200px) {
@@ -250,8 +320,8 @@
     .container-register__title {
         margin-top: 0;
     }
-    .container-form-contact__title,  .container-total-price-cart__title {
-        font-size: 1.4rem;
+    .container-form-contact__title,  .container-total-price-cart__title, .main-order__title, .container-total-resume-order__title, .main-cart-shopping__title {
+        font-size: 1.3rem;
     }
     .form-register__btn, .form-contact__btn, .form-login__btn  {
         font-size: 1rem;
@@ -266,7 +336,109 @@
     .main-cart-shopping {
         grid-template-columns: 500px 300px;
     }
+    .container-images-product {
+        grid-template-columns: 95px 285px;
+    }
+    .section-view-product {
+        gap: 2.5em;
+    }
+    .container-info-product__title, .container-others-products__title {
+        font-size: 1.4rem;
+    }
+    .glider-next {
+        right: -.7em;
+    }
+    .container-label-address-user__input, .container-label-address-user__select, .container-label-form__input, .container-select-update-user, .container-label-form-contraseña__input {
+        font-size: 1.1rem;
+        height: 44px;
+    }
+    .container-label-address-user, .container-label-form-contraseña {
+        font-size: 1rem;
+    }
+    .container-form-address-user {
+        margin-top: 1.8em;
+    }
+    .container-list-address-user {
+        display: flex;
+        gap: 1em;
+        margin-top: 1em;
+    }
+    .container-element-address-user {
+        width: 370px;
+        height: 249px;
+        padding: 1.4em;
+        margin-right: 1.2em;
+    }
+    .container-main-dashboard-user__link {
+        width: 195px;
+        height: 44px;
+        line-height: 44px;
+        font-size: 1rem;
+    }
+    .main-order, .main-order-address, .main-payment-order, .main-confirmation-order {
+        display: grid;
+        grid-template-columns: 500px 340px;
+        grid-template-rows: 50px 1fr;
+        margin-left: auto;
+        gap: 1.2em;
+        row-gap: 1.5em;
+        margin-right: auto;
+        padding-top: 2.3em;
+    }
+    .container-resume-products-order, .container-total-resume-order {
+        margin: 0;
+    }
+    .container-total-resume-order {
+        width: 340px;
+        height: 330px;
+        border-radius: .5em;
+        -webkit-border-radius: .5em;
+        -moz-border-radius: .5em;
+        -ms-border-radius: .5em;
+        -o-border-radius: .5em;
+    }
+    .container-total-resume-order--size {
+        height: 250px;
+    }
+    .container-resume-products-order, .container-section-type-of-delivery-order, .container-type-of-payment-order, .container-confirm-order {
+        grid-row: 2;
+        grid-column: 1;
+    }
+    .container-total-resume-order {
+        grid-row: 2;
+        grid-column: 2;
+    }
+    .container-breadcrumb {
+        margin-left: 0;
+        padding: 0;
+    }
+    .container-list-breadcrumb {
+        height: 45px;
+        display: flex;
+        align-items: center;
+        margin: 0;
+    }
+    .main-order__title, .container-section-type-of-delivery-order__title, .container-type-of-payment-order__title, .container-confirm-order__title {
+        margin-top: 0;
+    }
+    .container-section-type-of-delivery-order, .container-type-of-payment-order {
+        margin: 0;
+    }
+    .container-type-of-payment-order__title, .container-section-type-of-delivery-order__title, .container-type-of-payment-order__title {
+        font-size: 1.3rem;
+    }
 
+    .form-type-of-delivery-order__btn, .form-type-of-payment-order__btn {
+        margin-left: 0;
+        margin-right: 0;
+    }
+    .container-total-resume-order--height {
+        height: 370px;
+    }
+    .container-form-address-user--margin-left {
+        max-width: 360px;
+        margin-left: 1.1em;
+    }
 }
 
 @media screen and (min-width: 1400px) {
@@ -290,13 +462,40 @@
         font-size: 1rem;
     }
     .container-products {
-        padding-left: 1em;
+        padding-left: 0;
     }
-}
+    .container-images-product {
+        grid-template-columns: 100px 320px;
+    }
+    .main-product {
+        padding: 2.7em;
+        padding-bottom: 0;
+    }
+    .glider-prev {
+        left: -.7em;
+    }
+    .glider-next {
+        right: 0;
+    }
+    .container-total-price-cart {
+        padding: 1.7em;
+    }
+    .container-section-add-address-type-of-delivery {
+        width: 400px;
+    }
+    .container-label-address-user__input, .container-form-address-user__btn, .container-label-address-user__select {
+        min-width: 100%;
+    }
 
 @media screen and (min-width: 1600px) {
     .container-form-uptade-user {
         width: 900px;
+    }
+    .container-images-product {
+        grid-template-columns: 110px 330px;
+    }
+    .glider-next {
+        right: -.4em;
     }
 }
 
@@ -310,10 +509,10 @@
     .container-figure-main-header {
         height: 650px;
     }
-    .form-login, .container-login, .container-form-register, .container-form-contact {
+    .form-login, .container-login, .container-form-register, .container-form-contact, .container-section-add-address-type-of-delivery {
         width: 450px;
     }
     .form-contact, .form-register {
         margin-top: .3em;
     }
-}
+}}
