--- a/03-Desarrollo/Proyecto formativo django/SaleCold/templates/mails/plantillaBienvenida.html
+++ b/03-Desarrollo/Proyecto formativo django/SaleCold/templates/mails/plantillaBienvenida.html
@@ -7,7 +7,7 @@
             box-sizing: border-box;
         }
         .container-email {
-            max-width: 600px;
+            max-width: 540px;
             margin-left: auto;
             margin-right: auto;
             background-color: white;
@@ -82,7 +82,7 @@
         </article>
         <article class="container-email-main">
             <p class="container-email-main__paragraph">
-                Hola {{usuario}} 👋,
+                ¡Hola, {{usuario}}!,
             </p>
             <p class="container-email-main__paragraph">
                 Te damos la bienvenida a SaleCold, aqui encontraras repuestos de refrigeracion al mejor precio y con descuentos imperdibles.
