--- a/03-Desarrollo/Proyecto formativo django/SaleCold/templates/mails/plantillaEnvioFactura.html
+++ b/03-Desarrollo/Proyecto formativo django/SaleCold/templates/mails/plantillaEnvioFactura.html
@@ -77,7 +77,7 @@
 {% block content %}
     <section class="container-email">
         <article class="container-email-header">
-            <a href="{% if request.is_secure %}https{% else %}http{% endif %}://{{dominio}}{{url}}" class="container-image-email-header" target = "_blank" rel="noopener">    
+            <a href="{{index}}" class="container-image-email-header" target = "_blank" rel="noopener">    
                 <img src="https://res.cloudinary.com/dpxek6oka/image/upload/v1645626671/Logo/Logo4_ez3iqd.png" alt="Logo SaleCold" class="container-image-email-header__img" loading="lazy">
             </a>
         </article>
@@ -87,61 +87,12 @@
                 ¡Hola, {{usuario}}!,
             </p>
             <p class="container-email-main__paragraph">
-                {% if tipo_envio == 'Recoge en tienda' and tipo_pago == 'Pago electronico' %}
-                    ¡Gracias por comprar en nuestra tienda!, tenemos la informacion de tu pedido, realiza el pago y acercate a la tienda para recibir tus productos, la factura se enviara a tu correo una vez que se confirme el pago.
-                {% elif tipo_envio == 'Recoge en tienda' and tipo_pago == 'Efectivo' %}
-                    !Gracias por comprar en nuestra tienda!, tenemos la informacion de tu pedido, acercate a la tienda para recibir y pagar tus productos, la factura se enviara a tu correo una vez que se realice el pago.
-                {% elif tipo_envio == 'Entrega a domicilio' and tipo_pago == 'Pago electronico' %}
-                    !Gracias por comprar en nuestra tienda!, tenemos la informacion de tu pedido, los productos se enviaran a tu domicilio una vez que se confirme el pago, la factura se enviara a tu correo cuando se confirme el pago.
-                {% elif tipo_envio == 'Entrega a domicilio' and tipo_pago == 'Efectivo' %}
-                    !Gracias por comprar en nuestra tienda!, tenemos la informacion de tu pedido, los productos se enviaran a tu domicilio lo mas pronto posible, la factura se enviara a tu correo una vez que se reciba el pago.
-                {% endif %}
+                Gracias por tu compra, a continuacion te enviamos la factura electronica de tu pedido {{orden.identifier}}, la puedes descargar dando click en el boton "Descargar factura" o desde la seccion mis compras en la opcion mi cuenta.
             </p>
 
-            <p class="container-email-main__paragraph">
-                <span style="color: #256Edc;">Orden: </span>{{orden.identifier}}
-            </p>
-            <p class="container-email-main__paragraph">
-                <span style="color: #256Edc;">Fecha de pedido: </span>{{orden.order_date|date:'d/m/Y'}}
-            </p>
-            <p class="container-email-main__paragraph">
-                <span style="color: #256Edc;">Tipo de entrega: </span>{{orden.type_of_delivery}}
-            </p>
-            {% if tipo_envio == 'Entrega a domicilio' %}
-                <p class="container-email-main__paragraph">
-                    <span style="color: #256Edc;">Dirección de entrega: </span>{{orden.address.address}}, {{order.address.city}}
-                </p>
-            {% endif %}
-            <p class="container-email-main__paragraph">
-                <span style="color: #256Edc;">Método de pago: </span>{{orden.payment_type}}
-            </p>
-            <p class="container-email-main__paragraph">
-                <span style="color: #256Edc;">Total a pagar: </span>$ {{orden.get_total|intcomma}}
-            </p>
-
-            <h2 style="color: #256Edc;font-size: 1.3rem;font-weight: 400;">
-                Detalles de tu compra
-            </h2>
-            <table style="border-collapse: collapse;text-align: center;font-size: .9rem;width: 100%;">
-                <thead>
-                    <tr style="background-color: #5f95e7; color: white; height: 30px;">
-                        <th style="width: 35px;">#</th>
-                        <th>Producto</th>
-                        <th>Cantidad</th>
-                        <th style="width: 100px;">Precio</th>
-                    </tr>
-                </thead>
-                <tbody style="font-size: .8rem;">
-                    {% for object in orden.cart.cartproducts_set.all %}
-                        <tr>
-                            <td>{{forloop.counter}}</td>
-                            <td>{{object.product}}</td>
-                            <td>{{object.quantity}}</td>
-                            <td>$ {{object.product.final_price|intcomma}}</td>
-                        </tr>
-                    {% endfor %}
-                </tbody>
-            </table>
+            <a href="{{index}}{{url}}" target="_blank" rel="noopener" class="container-email-main__link" style="color:white;">
+                Descargar factura
+            </a>
 
             <p class="container-email-main__paragraph-footer">© SaleCold 2022</p>
         </article>
