Docs: Se actualiza el repositorio a la ultima version

--- a/03-Desarrollo/SaleCold/templates/info.html
+++ b/03-Desarrollo/SaleCold/templates/info.html
@@ -33,7 +33,7 @@
 				</li>
 			</ul>
 
-			<a href="#" target="_blank" class="user-manual" rel="noopener">
+			<a href="/media/Manual_de_usuario.pdf" target="_blank" class="user-manual" rel="noopener">
 				<img src="https://res.cloudinary.com/dpxek6oka/image/upload/v1647219783/images/guide_afvhfz-1_a6o9f8.webp" alt="Icono para descargar manual de usuario"
 					class="user-manual__icon" aria-hidden="true" loading="lazy" decoding="async">
 				Descargar manual de usuario
